# trade

./: .env.example  CLAUDE.md  Makefile  STORY-7.2-SUMMARY.md  docker-compose.dev.yml  docker-compose.yml
backend/: .env  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20251203_0001_initial_schema.py  20251206_0002_team_instance_full_schema.py  20251206_0003_performance_metrics.py  20251206_2158_a2d9f77ad266_add_decision_type_index.py  20251207_0401_d71f75c90e55_add_trailing_stop_pct_to_trades.py
backend/scripts/: test_aggregation.py  update_user_password.py
backend/src/: __init__.py  main.py
backend/src/agents/: __init__.py  analyst.py  base.py  crash_detector.py  factory.py  retry_utils.py  risk_manager.py  trader.py
backend/src/api/: __init__.py  deps.py  exception_handlers.py
backend/src/config/: __init__.py  settings.py
backend/src/core/: __init__.py  exceptions.py  logging.py  redis.py  scheduler.py
backend/src/db/: __init__.py  models.py  session.py
backend/src/mt5/: __init__.py  connector.py  market_data.py  orders.py  schemas.py
backend/src/services/: README_CREDENTIALS.md  __init__.py  analytics.py  auth.py  budget_manager.py  credentials.py  paper_trading.py  team_lifecycle.py
backend/src/teams/: __init__.py  loader.py  orchestrator.py  override.py  pipeline.py  schemas.py
backend/team_templates/: conservative_llm.yaml
backend/tests/agents/: test_analyst.py  test_base.py  test_crash_detector.py  test_factory.py  test_retry_utils.py  test_risk_manager.py  test_trader.py
backend/tests/api/: test_analytics_routes.py  test_auth_routes.py  test_websocket.py
backend/tests/core/: test_logging.py  test_scheduler.py
backend/tests/db/: test_decision_log.py
backend/tests/mt5/: __init__.py  test_connector.py  test_market_data.py  test_orders.py
backend/tests/services/: test_analytics.py  test_auth.py  test_budget_manager.py  test_credentials.py  test_paper_trading.py  test_team_lifecycle.py
backend/tests/teams/: __init__.py  test_loader.py  test_orchestrator.py  test_override.py  test_pipeline.py  (+1 more)
(+169 files in other folders)
