[project]
name = "trade-backend"
version = "0.1.0"
description = "Multi-Agent Day-Trading Platform Backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.24",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis>=5.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=23.2",
    "python-socketio>=5.10",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langgraph>=0.2",
    "pyyaml>=6.0",
    "cryptography>=46.0.3",
    "bcrypt>=5.0.0",
    "tenacity>=9.1.2",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
# aiomql/metatrader5 only available on Windows
mt5 = [
    "aiomql>=4.0",
]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "httpx>=0.25",
    "ruff>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
